# gsoc2008

./: Makefile.am  configure.ac
libempathy/: Makefile.am  empathy-debug.c  empathy-debug.h  empathy-tp-audio-stream.c  empathy-tp-audio-stream.h  empathy-tp-call.c  empathy-tp-call.h  empathy-tp-video-sink.c  empathy-tp-video-stream.c  empathy-tp-video-stream.h
libstream-engine/: Makefile.am  channel.c  channel.h  stream-engine-main.c
megaphone/src/: Makefile.am
nothere/src/: Makefile.am
python/pyempathy/: Makefile.am  pyempathy.defs  pyempathy.override
src/: Makefile.am  empathy-call-window.c  empathy-tp-call.c  empathy-tp-util.c  empathy-tp-util.h  empathy-tp-video-preview.c  empathy-tp-video-preview.h  empathy-tp-video-sink.h  empathy-tp-video-stream.c  empathy.c
tests/: Makefile.am
